--- a/animacoes.css
+++ b/animacoes.css
@@ -1,3 +1,12 @@
 nav a:hover{
-    color: rgb(195, 226, 19);
+    color: var(--corternaria);
+}
+
+.btn:hover{
+    cursor: pointer;
+    box-shadow: 1px 1px 5px 3px rgba(80, 253, 0, 0.315);;
+}
+
+.bottomS{
+    cursor: pointer;
 }
